# biolevate-api-sdk

./: .gitignore  .release-please-manifest.json  .tool-versions  LICENSE  Makefile  README.md  pyrightconfig.json  release-please-config.json
python/: pyproject.toml  pyrightconfig.json
python/client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
python/client/.github/workflows/: python.yml
python/client/.openapi-generator/: FILES
python/client/biolevate_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/client/biolevate_client/api/: __init__.py  collections_api.py  extraction_api.py  files_api.py  provider_items_api.py  providers_api.py  question_answering_api.py
python/client/biolevate_client/models/: __init__.py  add_file_to_collection_request.py  annotation_id.py  annotation_id_entity_type.py  bbox_dto.py  collection_id.py  collection_id_entity_type.py  collection_view_id.py  collection_view_id_entity_type.py  data_value.py  (+93 more)
python/client/docs/: AddFileToCollectionRequest.md  AnnotationId.md  BboxDto.md  CollectionId.md  CollectionViewId.md  CollectionsApi.md  ConfirmUploadRequest.md  CreateCollectionRequest.md  CreateExtractRequest.md  CreateFileRequest.md  CreateItemRequest.md  CreateQARequest.md  DataValue.md  DownloadUrlResponse.md  EliseAnnotation.md  EliseAnnotationConfig.md  EliseAnnotationData.md  EliseCollectionInfo.md  EliseDocumentStatement.md  EliseDocumentStatementAllOfPositions.md  EliseExternalDocumentStatement.md  EliseFileInfo.md  EliseFullDocumentStatement.md  EliseKnowledgeStatement.md  EliseMetaInput.md  EliseMetaResult.md  EliseOntology.md  EliseOntologyMeta.md  EliseQAResult.md  EliseQuestionInput.md  EliseReviewComment.md  EliseWebStatement.md  EntityId.md  ExpectedAnswerTypeDto.md  ExtractJobInputs.md  ExtractJobOutputs.md  ExtractionApi.md  FSProviderAzureConfigExternal.md  FSProviderConfigurationExternal.md  FSProviderExternal.md  (+37 more)
python/client/test/: test_add_file_to_collection_request.py  test_annotation_id.py  test_bbox_dto.py  test_collection_id.py  test_collection_view_id.py  test_collections_api.py  test_confirm_upload_request.py  test_create_collection_request.py  test_create_extract_request.py  test_create_file_request.py  test_create_item_request.py  test_create_qa_request.py  test_data_value.py  test_download_url_response.py  test_elise_annotation.py  test_elise_annotation_config.py  test_elise_annotation_data.py  test_elise_collection_info.py  test_elise_document_statement.py  test_elise_document_statement_all_of_positions.py  test_elise_external_document_statement.py  test_elise_file_info.py  test_elise_full_document_statement.py  test_elise_knowledge_statement.py  test_elise_meta_input.py  test_elise_meta_result.py  test_elise_ontology.py  test_elise_ontology_meta.py  test_elise_qa_result.py  test_elise_question_input.py  test_elise_review_comment.py  test_elise_web_statement.py  test_entity_id.py  test_expected_answer_type_dto.py  test_extract_job_inputs.py  test_extract_job_outputs.py  test_extraction_api.py  test_file_id.py  test_files_api.py  test_files_input.py  (+37 more)
python/sdk/: CHANGELOG.md  README.md  pyproject.toml
python/sdk/biolevate/: __init__.py  cli.py  client.py  exceptions.py  models.py
python/sdk/scripts/: __init__.py  common.py  get_provider.py  list_providers.py  test_collections.py  test_extraction.py  test_files.py  test_files_cleanup.py  test_provider_items.py  test_providers.py  test_qa.py  test_utils.py
python/sdk/tests/: __init__.py  conftest.py  test_providers.py
(+84 files in other folders)
