[project]
name = "biolevate-python-workspace"
version = "0.0.0"
description = "Biolevate Python SDK workspace"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "biolevate",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.2.0",
]

[tool.uv.workspace]
members = ["client", "sdk"]

[tool.uv.sources]
biolevate = { workspace = true }
biolevate-client = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["biolevate", "biolevate_client"]

[tool.pytest.ini_options]
testpaths = ["sdk/tests", "client/tests"]
asyncio_mode = "auto"
